--- a/views/home.html
+++ b/views/home.html
@@ -4,117 +4,174 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvendios a MercadoLiebre</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <link href="css/styles.css" rel = "stylesheet"/>
+    <link href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel = "stylesheet" />
+    <title>Bienvenidos a MercadoLiebre</title>
+    
 </head>
 <body>
     <header>
-        <img src="images\logo-mercado-liebre.svg" width= "360" alt = "Logo">
-        <p>Lugar para poner la barra de búsqueda
-        </p>
+        <div class = "top-header">
+            <div class ="logo">
+                <img src="images\logo-mercado-liebre.svg" alt = "Logo">
+            </div>
+            <div class="form" action="#" method="GET">
+                <div class="input">Buscar productos, marcas y más</div>
+                <div class="submit"><i class="fa fa-search"></i></div>
+            </div>
 
-        <p>Comprá en cuotas y sin tarjeta de crédito
-        </p>
+            <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito
+            </p>
+        </div>
+
         <nav>
             <ul>
-                <li><a href = "#">Ofertas</a></li>
-                <li><a href = "#">Tiendas Oficiales</a></li>
-                <li><a href = "#">Vender</a></li>
-                <li><a href = "#">Ayuda</a></li>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
             </ul>
-
             <ul>
-                <li><a href = "#">Crea tu cuenta</a></li>
-                <li><a href = "#">Ingresa</a></li>
-                <li><a href = "#">Mis compras</a></li>
+                <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-    </header>
 
-    <section>
+        <div class = "burger-menu">
+            <i class ="fas fa-bars"></i>
+        </div>
+    
+    </header>
+    
+
+    <section class= "banner">
         <img src="images\img-home-banner.jpg" width="360" alt="Banner de oferta">
     </section>
 
     <main>
-        <section>
-            <h2>Basado en tu ultima visita</h2>
-            <article>
-                <img src = "images\img-cafetera-moulinex.jpg" width="360">
-                <p>$6.770</p>
-                <p>40% OFF</p>
-                <h4>Cafetera Moulinex</h4> 
-            </article>
 
-            <article>
-                <img src = "images\img-macbook-pro-2019.jpg" width="360">
-                <p>$230.000</p>
-                <p>20% OFF</p>
-                <h4>MacBook Pro 2019</h4> 
-            </article>
+        <section class="last-visit">
 
-            <article>
-                <img src = "images\img-samsung-galaxy-s10.jpg" width="360">
-                <p>$70.500</p>
-                <p>10% OFF</p>
-                <h4>Samsung Galaxy S10</h4> 
-            </article>
+            <h3>Basado en tu ultima visita</h3>
 
-            <article>
-                <img src = "images\img-tv-samsung-smart.jpg" width="360">
-                <p>$23.200</p>
-                <p>5% OFF</p>
-                <h4>SmartTv Samsung 43"</h4> 
-            </article>
+            <div class="products">
 
+                <article>
+                    <img src = "images\img-cafetera-moulinex.jpg" width="360" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class = "precio">$6.770</p>
+                        <p class="discount">40% OFF</p>
+                        <h4 class="description">Cafetera Moulinex</h4> 
+                    </div>
+                </article>
+
+                <article>
+                    <img src = "images\img-macbook-pro-2019.jpg" width="360" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class = "precio">$230.000</p>
+                        <p class="discount">20% OFF</p>
+                        <h4 class="description">MacBook Pro 2019</h4> 
+                    </div>
+                </article>
+
+                <article>
+                    <img src = "images\img-samsung-galaxy-s10.jpg" width="360" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class = "precio">$70.500</p>
+                        <p class="discount">10% OFF</p>
+                        <h4 class="description">Samsung Galaxy S10</h4> 
+                    </div>
+                </article>
+
+                <article>
+                    <img src = "images\img-tv-samsung-smart.jpg" width="360" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class = "precio">$23.200</p>
+                        <p class="discount">5% OFF</p>
+                        <h4 class="description">SmartTv Samsung 43"</h4> 
+                    </div>
+                </article>
+            </div>
         </section>
 
 
 
-        <section>
-            <h2>Ofertas</h2>
-            <article>
-                <img src = "images\img-cafetera-moulinex.jpg" width="360">
-                <p>$6.770</p>
-                <p>40% OFF</p>
-                <h4>Cafetera Moulinex</h4> 
-            </article>
-            <article>
-                <img src = "images\img-macbook-pro-2019.jpg" width="360">
-                <p>$230.000</p>
-                <p>20% OFF</p>
-                <h4>MacBook Pro 2019</h4> 
-            </article>
-            <article>
-                <img src = "images\img-samsung-galaxy-s10.jpg" width="360">
-                <p>$70.500</p>
-                <p>10% OFF</p>
-                <h4>Samsung Galaxy S10</h4> 
-            </article>
-            <article>
-                <img src = "images\img-tv-samsung-smart.jpg" width="360">
-                <p>$23.200</p>
-                <p>5% OFF</p>
-                <h4>SmartTv Samsung 43"</h4> 
-            </article>
+        <section class ="offers">
+
+            <h3>Ofertas</h3>
+
+            <div class="products">   
+                <article>
+                    <img src = "images\img-cafetera-moulinex.jpg" width="360" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class = "precio">$6.770</p>
+                        <p class="discount">40% OFF</p>
+                        <h4 class="description">Cafetera Moulinex</h4> 
+                    </div>
+                </article>
+
+                <article>
+                    <img src = "images\img-macbook-pro-2019.jpg" width="360" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class = "precio">$230.000</p>
+                        <p class="discount">20% OFF</p>
+                        <h4 class="description">MacBook Pro 2019</h4> 
+                    </div>
+                </article>
+
+                <article>
+                    <img src = "images\img-samsung-galaxy-s10.jpg" width="360" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class = "precio">$70.500</p>
+                        <p class="discount">10% OFF</p>
+                        <h4 class="description">Samsung Galaxy S10</h4> 
+                    </div>
+                </article>
+
+                <article>
+                    <img src = "images\img-tv-samsung-smart.jpg" width="360" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class = "precio">$23.200</p>
+                        <p class="discount">5% OFF</p>
+                        <h4 class="description">SmartTv Samsung 43"</h4> 
+                    </div>
+                </article>
+            </div>
 
         </section>
+
     </main>
 
     <footer>
+
         <section>
+
             <article>
-                <h4>Pagá con tarjeta o en efectivo</h4>
+                <h4 ><i class="fas fa-credit-card"></i>Pagá con tarjeta o en efectivo</h4>
                 <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                     puntos de pago. ¡Y siempre es seguro!</p>
             </article>
 
             <article>
-                <h4>Envío gratis desde $ 2.500</h4>
+                <h4><i class="fas fa-gift"></i>Envío gratis desde $ 2.500</h4>
                 <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                     productos. Es un beneficio de Mercado Puntos.</p>
             </article>
 
             <article>
-                <h4>Seguridad, de principio a fin</h4>
+                <h4><i class="fas fa-user-shield"></i>Seguridad, de principio a fin</h4>
                 <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                     porque estás siempre protegid@.</p>
             </article>
@@ -122,8 +179,10 @@
             <article>
                 <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
             </article>
+
         </section>
+
     </footer>
+
 </body>
 </html>
-
